<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings existentes -->
    <string name="app_name">Edy_Projeto</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="welcome_message">Welcome to Project Pulse</string>
    <string name="app_logo">App Logo</string>

    <!-- Novas Strings -->
    <!-- Tela de Lista de Projetos -->
    <string name="project_list_title">Meus Projetos</string>
    <string name="add_project">Adicionar Projeto</string>

    <!-- Tela de Detalhes do Projeto -->
    <string name="project_title_hint">Título do Projeto</string>
    <string name="project_description_hint">Descrição do Projeto</string>
    <string name="save_project">Salvar Projeto</string>
    <string name="tasks_title">Tarefas</string>
    <string name="add_task">Adicionar Tarefa</string>

    <!-- Tela de Gerenciamento de Tarefas -->
    <string name="task_title_hint">Título da Tarefa</string>
    <string name="task_description_hint">Descrição da Tarefa</string>
    <string name="task_due_date_hint">Data de Vencimento</string>
    <string name="save_task">Salvar Tarefa</string>

    <!-- Tela de Notificações -->
    <string name="notifications_title">Notificações</string>

    <!-- Tela de Relatórios -->
    <string name="reports_title">Relatórios</string>
    <string name="overall_progress">Progresso Geral</string>
    <string name="email_hint">Enter your email</string>

</resources>
